fixed bug with icons not aligning, fixed price location in order history, added separators

--- a/Fatherboard/public/css/settings.css
+++ b/Fatherboard/public/css/settings.css
@@ -229,6 +229,13 @@ address-element:hover {
 
 .return-wrapper{
     position: absolute;
+    margin-top: 30px;
+}
+
+
+
+.order-detail-wrapper{
+    margin-top: 30px;
 }
 
 .option {
